--- a/src/app/view/pacientes/pacientes.component.scss
+++ b/src/app/view/pacientes/pacientes.component.scss
@@ -972,7 +972,7 @@
 /* Grupos de formulario modernos */
 .form-group-moderno {
     margin-bottom: 1.25rem;
-    height: 100%;
+    height: 100% !important;
 
     .form-label-moderno {
         display: flex;
